<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game of Go</string>
    <string name="menu_settings">Settings</string>
    <string name="button_pass_label">Pass</string>
    <string name="button_label_challenges">Challenges</string>
    <string name="button_label_free_game">Free Game</string>
    <string name="black_label">Black</string>
    <string name="white_label">White</string>
    <string name="board_size_label">Select board size</string>
    <string name="handicap_label">Handicap</string>
    <string name="start_game_label">Start Game</string>
    <string name="choose_opponent_label">Select your opponent</string>
    <string name="configure_game_label">Configure Game</string>
    <string name="computer_opponent_label">Computer</string>
    <string name="human_local_opponent_label">Human (Local)</string>
    <string name="board_size_label_5x5">5x5</string>
    <string name="board_size_label_9x9">9x9</string>
    <string name="board_size_label_13x13">13x13</string>
    <string name="board_size_label_19x19">19x19</string>
    <string name="you_label">You</string>
    <string name="name_label">Name</string>
    <string name="color_label">Color</string>
    <string name="opponent_label">Opponent</string>
    <string name="your_default_name">Player 1</string>
    <string name="opponent_default_name">Player 2</string>
    <string name="end_of_game_dialog_title">"End of game"</string>
    <string name="end_of_game_dialog_message">"I really should tell you who has won here, but not
        just yet…"
    </string>
    <string name="opponent_passed_dialog_title">Passed!</string>
    <string name="opponent_passed_dialog_message">"%1$s has passed!\nDo you want to pass?"</string>
    <string name="button_continue_label">Continue</string>

</resources>