<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <Button android:id="@+id/configure_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure_game_label"
            android:onClick="configureGame"
            android:padding="12dip"
            android:layout_alignParentBottom="true"
            />
    <ScrollView   android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_above="@id/configure_game_button"
                  android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView  style="@style/Title"
                       android:text="@string/choose_opponent_label"/>

            <RadioGroup android:id="@+id/opponent_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">
                <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/computer_opponent_label"
                        android:id="@+id/opponent_computer_radio"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/human_local_opponent_label"
                        android:id="@+id/opponent_human_local_radio"/>
            </RadioGroup>
            <TextView  style="@style/Title"
                       android:text="@string/board_size_label"/>

            <RadioGroup  android:id="@+id/board_size_radio_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left">
                <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/board_size_label_5x5"
                        android:id="@+id/board_size_5x5"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/board_size_label_9x9"
                        android:checked="true"
                        android:id="@+id/board_size_9x9"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/board_size_label_13x13"
                        android:id="@+id/board_size_13x13"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/board_size_label_19x19"
                        android:id="@+id/board_size_19x19"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
